<resources>
    <string name="app_name">Launcher30</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_all_apps">All Apps</string>
    <string name="title_customize">Customizations</string>
    <string name="title_more_settings">More Settings</string>
    <string name="title_app_settings">App Settings</string>
    <string name="title_icon_packs">Icon Packs</string>
    <string name="title_icon_pack_icons">All Icons</string>

    <string name="title_nav_all_apps">Apps</string>
    <string name="title_nav_customize">Customizations</string>
    <string name="title_nav_more_settings">More</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="restore">Restore</string>

    <string name="title_icon_touch_effect">Icon Touch Effect</string>
    <string name="desc_icon_touch_effect">Icon zooms out when touched instead of zooming in</string>
    <string name="title_notification_dot_color">Notification Dot Color</string>
    <string name="desc_notification_dot_color">Color of notification dots shown on top of icons</string>
    <string name="desc_icon_packs">All available icon packs</string>
    <string name="reset_app_settings">Reset App Settings</string>
    <string name="btn_apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="title_enable_adaptive_icon">Use Adaptive Icon</string>
    <string name="desc_adaptive_icon">An adaptive icon, or AdaptiveIconDrawable, can display differently depending on individual device capabilities and user theming</string>

    <string name="desc_reset_notification_color">Color reset will only take effect after next launcher restart</string>

    <string name="title_done_toast">Done</string>
    <string name="title_icon_applied">Icon Applied</string>
    <string name="title_notification_dot_color_applied">Color Applied</string>

    <string name="title_reload_launcher">Reload Launcher</string>
    <string name="desc_reload_launcher">Force reload launcher and rebind all workspace components</string>
    <string name="title_clear_icon_caches">Clear Icon Caches</string>
    <string name="desc_clear_icon_caches">Clear all icon caches in database, and reload launcher to load all workspace components</string>

    <string name="title_hide_icon_text">Hide Icon Text</string>
    <string name="desc_hide_icon_text">Do not display icon text</string>
    <string name="title_draw_notification_dot">Show Notification Count</string>
    <string name="desc_draw_notification_dot">Show badged notification count inside center of notification dots</string>

    <string name="title_category_icon">Icon</string>
    <string name="title_category_notification">Notification</string>
    <string name="title_category_workspace">Workspace</string>

    <string name="title_hide_spring_loaded_bg">Hide Dragging Background</string>
    <string name="desc_hide_spring_loaded_bg">Hide desktop background while dragging icons, widgets etc.</string>

    <string name="title_hide_qsb">Hide QSB</string>
    <string name="desc_hide_qsb">Hide quick search bar (or sometimes At A Glance) on first screen</string>

    <string name="title_center_folder">Center Opened Folder</string>
    <string name="desc_center_folder">Show an opened folder on center of screen</string>

    <string name="title_this_proj_source">Source Code</string>
    <string name="desc_this_proj_source">Get the source code of this project from Github</string>

    <string name="title_oss">Open Source Licenses</string>

    <string name="title_category_launcher">Launcher</string>
    <string name="title_category_proj">Project</string>

    <string name="title_privacy_apps">Privacy Apps</string>
    <string name="desc_privacy_apps">Privacy apps will be hidden from drawer and desktop. You can find an entry for all privacy apps when long-clicking workspace</string>

    <string name="text_fail_start_privacy_app">Failed to start app</string>
    <string name="title_no_privacy_app">No Privacy App</string>

    <string name="title_all_privacy_apps">All Privacy Apps</string>
    <string name="title_enable_privacy_biometric">Use Biometric Authentication</string>
    <string name="desc_enable_privacy_biometric">Use biometric authentication to use or modify privacy apps</string>

    <string name="title_authenticate">Authenticate</string>
    <string name="subtitle_auth">Use biometric to authenticate</string>
    <string name="title_auth_failed">Failed to authenticate</string>
    <string name="title_privacy_settings">Privacy Settings</string>
    <string name="desc_biometric_unavailable">Biometric not available now</string>

    <string name="title_hide_privacy_from_recents">Hide From Recents</string>
    <string name="desc_hide_privacy_from_recents">Hide privacy apps from recent tasks</string>

    <string name="title_custom_spring_loaded_effect">Custom Drag Behavior</string>
    <string name="desc_custom_spring_loaded_effect">Launcher workspace will not be scaled while dragging icons/widgets</string>

    <string name="title_icon_specs_settings">Icon Size</string>
    <string name="desc_icon_specs_settings">Setting icon size scale and icon text size scale</string>
    <string name="title_icon_size_scale">Icon Size Scale</string>
    <string name="title_icon_text_size_scale">Icon Text Size Scale</string>
    <string name="titl_icon_drawable_padding">Icon Text Padding Scale</string>

    <string name="title_hide_all_apps_icon_text">Hide Drawer Icon Text</string>
    <string name="desc_hide_all_apps_icon_text">Do not display icon text on drawer</string>

    <string name="title_show_app_entry_on_options">Show App Entry</string>
    <string name="desc_show_app_entry_on_options">Show app entry on launcher options</string>
</resources>