<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_apps">

    <fragment
        android:id="@+id/navigation_all_apps"
        android:name="com.hhvvg.launcher3customizer.ui.apps.AllAppsFragment"
        android:label="@string/title_all_apps"
        tools:layout="@layout/fragment_all_apps" >
    </fragment>

    <fragment
        android:id="@+id/navigation_customization"
        android:name="com.hhvvg.launcher3customizer.ui.customize.CustomizeFragment"
        android:label="@string/title_customize"
        tools:layout="@layout/fragment_customize" />

    <fragment
        android:id="@+id/navigation_more_settings"
        android:name="com.hhvvg.launcher3customizer.ui.more.MoreSettingsFragment"
        android:label="@string/title_more_settings"
        tools:layout="@layout/fragment_more_settings" />
</navigation>