<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp">
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.skydoves.colorpickerview.ColorPickerView
        app:selector="@drawable/alpha_slide_bar_wheel"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/titleView"
        android:padding="20dp"
        android:id="@+id/colorPicker"
        android:layout_width="match_parent"
        android:layout_height="400dp" />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/confirmButton"
        app:layout_constraintTop_toBottomOf="@id/colorPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TextButton"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton"
        app:layout_constraintTop_toTopOf="@id/confirmButton"
        app:layout_constraintEnd_toStartOf="@id/confirmButton"
        android:layout_marginEnd="10dp"/>
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TextButton"
        android:text="@string/restore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/restoreButton"
        app:layout_constraintTop_toTopOf="@id/confirmButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>